test/invalid/baseline/typedef-nested.txt
Syntax error at line 14 in typedef-nested.widl, since `interface Widget`:
    typedef sequence<Point>
    ^ Missing return type
